--- a/1.0-Unet-Engineering_Katrins_Version.ipynb
+++ b/1.0-Unet-Engineering_Katrins_Version.ipynb
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -1654,7 +1654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1664,14 +1664,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Image files: 1716\n",
+      "Image files: 1717\n",
       "\n"
      ]
     }
@@ -1692,7 +1692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1706,7 +1706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1743,6 +1743,14 @@
       "Found 1716 validated image filenames.\n",
       "(1, 256, 256, 3)\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "E:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\keras_preprocessing\\image\\dataframe_iterator.py:279: UserWarning: Found 1 invalid image filename(s) in x_col=\"img\". These filename(s) will be ignored.\n",
+      "  warnings.warn(\n"
+     ]
     }
    ],
    "source": [
@@ -1753,14 +1761,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1716/1716 [==============================] - 216s 125ms/step\n"
+      "1716/1716 [==============================] - 210s 122ms/step\n"
      ]
     }
    ],
@@ -1771,7 +1779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1791,23 +1799,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file= os.add_dll_directory(\"E:/W_Katrin/Kigali/Raster/tiles/testing_0_0.jpg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "Cannot handle this data type: (1, 1, 3), <f4",
+     "ename": "ImportError",
+     "evalue": "Traceback (most recent call last):\n  File \"E:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\osgeo\\__init__.py\", line 29, in swig_import_helper\n    return importlib.import_module(mname)\n  File \"E:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\importlib\\__init__.py\", line 126, in import_module\n    return _bootstrap._gcd_import(name[level:], package, level)\n  File \"<frozen importlib._bootstrap>\", line 1050, in _gcd_import\n  File \"<frozen importlib._bootstrap>\", line 1027, in _find_and_load\n  File \"<frozen importlib._bootstrap>\", line 1006, in _find_and_load_unlocked\n  File \"<frozen importlib._bootstrap>\", line 674, in _load_unlocked\n  File \"<frozen importlib._bootstrap>\", line 571, in module_from_spec\n  File \"<frozen importlib._bootstrap_external>\", line 1176, in create_module\n  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\nImportError: DLL load failed while importing _gdal: Die angegebene Prozedur wurde nicht gefunden.\n\nOn Windows, with Python >= 3.8, DLLs are no longer imported from the PATH.\nIf gdalXXX.dll is in the PATH, then set the USE_PATH_FOR_GDAL_PYTHON=YES environment variable\nto feed the PATH into os.add_dll_directory().",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\PIL\\Image.py:2835\u001b[0m, in \u001b[0;36mfromarray\u001b[1;34m(obj, mode)\u001b[0m\n\u001b[0;32m   2834\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m-> 2835\u001b[0m     mode, rawmode \u001b[38;5;241m=\u001b[39m \u001b[43m_fromarray_typemap\u001b[49m\u001b[43m[\u001b[49m\u001b[43mtypekey\u001b[49m\u001b[43m]\u001b[49m\n\u001b[0;32m   2836\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
-      "\u001b[1;31mKeyError\u001b[0m: ((1, 1, 3), '<f4')",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[1;32mIn [29]\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;28mlen\u001b[39m(mask_predicted)): \n\u001b[0;32m      4\u001b[0m     mask_pred \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msqueeze(mask_predicted[i])\n\u001b[1;32m----> 5\u001b[0m     mask_pred_im \u001b[38;5;241m=\u001b[39m \u001b[43mImage\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mfromarray\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmask_pred\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      6\u001b[0m     save_to\u001b[38;5;241m=\u001b[39m os\u001b[38;5;241m.\u001b[39mpath\u001b[38;5;241m.\u001b[39mjoin(savedir, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mtesting_\u001b[39m\u001b[38;5;132;01m{x}\u001b[39;00m\u001b[38;5;124m.jpg\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m.\u001b[39mformat(x \u001b[38;5;241m=\u001b[39m i))\n\u001b[0;32m      7\u001b[0m     mask_pred_im\u001b[38;5;241m.\u001b[39msave(save_to)\n",
-      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\PIL\\Image.py:2837\u001b[0m, in \u001b[0;36mfromarray\u001b[1;34m(obj, mode)\u001b[0m\n\u001b[0;32m   2835\u001b[0m         mode, rawmode \u001b[38;5;241m=\u001b[39m _fromarray_typemap[typekey]\n\u001b[0;32m   2836\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[1;32m-> 2837\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot handle this data type: \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m, \u001b[39m\u001b[38;5;132;01m%s\u001b[39;00m\u001b[38;5;124m\"\u001b[39m \u001b[38;5;241m%\u001b[39m typekey) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me\u001b[39;00m\n\u001b[0;32m   2838\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m   2839\u001b[0m     rawmode \u001b[38;5;241m=\u001b[39m mode\n",
-      "\u001b[1;31mTypeError\u001b[0m: Cannot handle this data type: (1, 1, 3), <f4"
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\osgeo\\__init__.py:29\u001b[0m, in \u001b[0;36mswig_import_helper\u001b[1;34m()\u001b[0m\n\u001b[0;32m     28\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m---> 29\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mimportlib\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimport_module\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmname\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n",
+      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\importlib\\__init__.py:126\u001b[0m, in \u001b[0;36mimport_module\u001b[1;34m(name, package)\u001b[0m\n\u001b[0;32m    125\u001b[0m         level \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m\n\u001b[1;32m--> 126\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_bootstrap\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_gcd_import\u001b[49m\u001b[43m(\u001b[49m\u001b[43mname\u001b[49m\u001b[43m[\u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m:\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpackage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlevel\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap>:1050\u001b[0m, in \u001b[0;36m_gcd_import\u001b[1;34m(name, package, level)\u001b[0m\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap>:1027\u001b[0m, in \u001b[0;36m_find_and_load\u001b[1;34m(name, import_)\u001b[0m\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap>:1006\u001b[0m, in \u001b[0;36m_find_and_load_unlocked\u001b[1;34m(name, import_)\u001b[0m\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap>:674\u001b[0m, in \u001b[0;36m_load_unlocked\u001b[1;34m(spec)\u001b[0m\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap>:571\u001b[0m, in \u001b[0;36mmodule_from_spec\u001b[1;34m(spec)\u001b[0m\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap_external>:1176\u001b[0m, in \u001b[0;36mcreate_module\u001b[1;34m(self, spec)\u001b[0m\n",
+      "File \u001b[1;32m<frozen importlib._bootstrap>:241\u001b[0m, in \u001b[0;36m_call_with_frames_removed\u001b[1;34m(f, *args, **kwds)\u001b[0m\n",
+      "\u001b[1;31mImportError\u001b[0m: DLL load failed while importing _gdal: Die angegebene Prozedur wurde nicht gefunden.",
+      "\nDuring handling of the above exception, another exception occurred:\n",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Input \u001b[1;32mIn [20]\u001b[0m, in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mosgeo\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m gdal\n\u001b[0;32m      2\u001b[0m \u001b[38;5;66;03m#file = \"E:/W_Katrin/Kigali/Raster/tiles/testing_0_0.jpg\"\u001b[39;00m\n\u001b[0;32m      3\u001b[0m img \u001b[38;5;241m=\u001b[39m gdal\u001b[38;5;241m.\u001b[39mOpen(file)\n",
+      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\osgeo\\__init__.py:45\u001b[0m, in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     41\u001b[0m                 \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(traceback_string \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m msg)\n\u001b[0;32m     42\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m importlib\u001b[38;5;241m.\u001b[39mimport_module(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_gdal\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m---> 45\u001b[0m _gdal \u001b[38;5;241m=\u001b[39m swig_import_helper()\n\u001b[0;32m     46\u001b[0m \u001b[38;5;28;01mdel\u001b[39;00m swig_import_helper\n\u001b[0;32m     48\u001b[0m __version__ \u001b[38;5;241m=\u001b[39m _gdal\u001b[38;5;241m.\u001b[39m__version__ \u001b[38;5;241m=\u001b[39m _gdal\u001b[38;5;241m.\u001b[39mVersionInfo(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRELEASE_NAME\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mE:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\osgeo\\__init__.py:41\u001b[0m, in \u001b[0;36mswig_import_helper\u001b[1;34m()\u001b[0m\n\u001b[0;32m     39\u001b[0m         \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtraceback\u001b[39;00m\n\u001b[0;32m     40\u001b[0m         traceback_string \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(traceback\u001b[38;5;241m.\u001b[39mformat_exception(\u001b[38;5;241m*\u001b[39msys\u001b[38;5;241m.\u001b[39mexc_info()))\n\u001b[1;32m---> 41\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m(traceback_string \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;130;01m\\n\u001b[39;00m\u001b[38;5;124m'\u001b[39m \u001b[38;5;241m+\u001b[39m msg)\n\u001b[0;32m     42\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m importlib\u001b[38;5;241m.\u001b[39mimport_module(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m_gdal\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "\u001b[1;31mImportError\u001b[0m: Traceback (most recent call last):\n  File \"E:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\site-packages\\osgeo\\__init__.py\", line 29, in swig_import_helper\n    return importlib.import_module(mname)\n  File \"E:\\W_Katrin\\miniconda3\\envs\\tue_dl2\\lib\\importlib\\__init__.py\", line 126, in import_module\n    return _bootstrap._gcd_import(name[level:], package, level)\n  File \"<frozen importlib._bootstrap>\", line 1050, in _gcd_import\n  File \"<frozen importlib._bootstrap>\", line 1027, in _find_and_load\n  File \"<frozen importlib._bootstrap>\", line 1006, in _find_and_load_unlocked\n  File \"<frozen importlib._bootstrap>\", line 674, in _load_unlocked\n  File \"<frozen importlib._bootstrap>\", line 571, in module_from_spec\n  File \"<frozen importlib._bootstrap_external>\", line 1176, in create_module\n  File \"<frozen importlib._bootstrap>\", line 241, in _call_with_frames_removed\nImportError: DLL load failed while importing _gdal: Die angegebene Prozedur wurde nicht gefunden.\n\nOn Windows, with Python >= 3.8, DLLs are no longer imported from the PATH.\nIf gdalXXX.dll is in the PATH, then set the USE_PATH_FOR_GDAL_PYTHON=YES environment variable\nto feed the PATH into os.add_dll_directory()."
+     ]
+    }
+   ],
+   "source": [
+    "from osgeo import gdal\n",
+    "#file = \"E:/W_Katrin/Kigali/Raster/tiles/testing_0_0.jpg\"\n",
+    "img = gdal.Open(file)\n",
+    "img.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[9.17054951e-01 1.01355491e-02 7.28095770e-02]\n",
+      "  [8.89542282e-01 7.33784540e-03 1.03119798e-01]\n",
+      "  [8.99643242e-01 3.64261190e-03 9.67141613e-02]\n",
+      "  ...\n",
+      "  [9.91283178e-01 1.25766775e-04 8.59106425e-03]\n",
+      "  [9.85570908e-01 2.60755711e-04 1.41684320e-02]\n",
+      "  [9.94716942e-01 3.68031579e-05 5.24625555e-03]]\n",
+      "\n",
+      " [[9.39233899e-01 2.81294193e-02 3.26367207e-02]\n",
+      "  [9.08360362e-01 5.00505827e-02 4.15890329e-02]\n",
+      "  [9.00392950e-01 4.79171313e-02 5.16899452e-02]\n",
+      "  ...\n",
+      "  [9.90463972e-01 2.48951185e-03 7.04645645e-03]\n",
+      "  [9.86884952e-01 1.84169190e-03 1.12732556e-02]\n",
+      "  [9.90331888e-01 9.71925692e-05 9.57094692e-03]]\n",
+      "\n",
+      " [[9.29723501e-01 1.39597906e-02 5.63166961e-02]\n",
+      "  [8.13435256e-01 1.17708065e-01 6.88566342e-02]\n",
+      "  [7.96116531e-01 1.31585583e-01 7.22979680e-02]\n",
+      "  ...\n",
+      "  [9.85402822e-01 4.09671571e-03 1.05004227e-02]\n",
+      "  [9.83070314e-01 3.82103818e-03 1.31086847e-02]\n",
+      "  [9.85853672e-01 9.58909732e-05 1.40505033e-02]]\n",
+      "\n",
+      " ...\n",
+      "\n",
+      " [[9.83151197e-01 2.22858321e-03 1.46201868e-02]\n",
+      "  [9.61092234e-01 2.53877025e-02 1.35200778e-02]\n",
+      "  [9.59490418e-01 1.83672272e-02 2.21422836e-02]\n",
+      "  ...\n",
+      "  [9.90289867e-01 2.67365389e-03 7.03644846e-03]\n",
+      "  [9.88217175e-01 2.10203207e-03 9.68082622e-03]\n",
+      "  [9.86636460e-01 8.25979587e-05 1.32809561e-02]]\n",
+      "\n",
+      " [[9.76281941e-01 2.51782080e-03 2.12002769e-02]\n",
+      "  [9.69759285e-01 1.24046272e-02 1.78361088e-02]\n",
+      "  [9.34503913e-01 2.23249570e-02 4.31711078e-02]\n",
+      "  ...\n",
+      "  [9.85304892e-01 3.50007322e-03 1.11949909e-02]\n",
+      "  [9.77293670e-01 4.48602159e-03 1.82203334e-02]\n",
+      "  [9.76544738e-01 1.67538325e-04 2.32878178e-02]]\n",
+      "\n",
+      " [[9.58517432e-01 1.22628454e-03 4.02563512e-02]\n",
+      "  [9.61597145e-01 4.90684668e-03 3.34960297e-02]\n",
+      "  [9.37252522e-01 5.18567162e-03 5.75618073e-02]\n",
+      "  ...\n",
+      "  [9.79600728e-01 2.14961614e-03 1.82496216e-02]\n",
+      "  [9.61850822e-01 3.11688404e-03 3.50322910e-02]\n",
+      "  [9.43511486e-01 2.20169197e-04 5.62683344e-02]]]\n",
+      "(256, 256, 3)\n"
      ]
     }
    ],
@@ -1816,9 +1911,12 @@
     "savedir = \"E:/W_Katrin/Kigali/Raster/tiles/predicted_m17\"\n",
     "for i in range(len(mask_predicted)): \n",
     "    mask_pred = np.squeeze(mask_predicted[i])\n",
-    "    mask_pred_im = Image.fromarray(mask_pred)\n",
-    "    save_to= os.path.join(savedir, \"testing_{x}.jpg\".format(x = i))\n",
-    "    mask_pred_im.save(save_to)"
+    "    print(mask_pred)\n",
+    "    print(mask_pred.shape)\n",
+    "    break\n",
+    "    #mask_pred_im = Image.fromarray(mask_pred)\n",
+    "    #save_to= os.path.join(savedir, \"testing_{x}.jpg\".format(x = i))\n",
+    "    #mask_pred_im.save(save_to)"
    ]
   },
   {
