--- a/Tiling.ipynb
+++ b/Tiling.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "id": "7ffec791-bd33-476b-814f-7f8884355b40",
    "metadata": {},
    "outputs": [],
@@ -238,14 +238,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "a52d747d-30fa-4293-b0ee-a455fe9784bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.10.2\n"
+     ]
+    }
+   ],
+   "source": [
+    "!python --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "26e03168-7121-45a8-a418-bb7360d98c06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Driver: JPEG/JPEG JFIF\n",
+      "Files: E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB.jpg\n",
+      "       E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB.jpg.aux.xml\n",
+      "Size is 13162, 8267\n",
+      "Coordinate System is:\n",
+      "PROJCRS[\"WGS 84 / UTM zone 36S\",\n",
+      "    BASEGEOGCRS[\"WGS 84\",\n",
+      "        DATUM[\"World Geodetic System 1984\",\n",
+      "            ELLIPSOID[\"WGS 84\",6378137,298.257223563,\n",
+      "                LENGTHUNIT[\"metre\",1]]],\n",
+      "        PRIMEM[\"Greenwich\",0,\n",
+      "            ANGLEUNIT[\"degree\",0.0174532925199433]],\n",
+      "        ID[\"EPSG\",4326]],\n",
+      "    CONVERSION[\"UTM zone 36S\",\n",
+      "        METHOD[\"Transverse Mercator\",\n",
+      "            ID[\"EPSG\",9807]],\n",
+      "        PARAMETER[\"Latitude of natural origin\",0,\n",
+      "            ANGLEUNIT[\"degree\",0.0174532925199433],\n",
+      "            ID[\"EPSG\",8801]],\n",
+      "        PARAMETER[\"Longitude of natural origin\",33,\n",
+      "            ANGLEUNIT[\"degree\",0.0174532925199433],\n",
+      "            ID[\"EPSG\",8802]],\n",
+      "        PARAMETER[\"Scale factor at natural origin\",0.9996,\n",
+      "            SCALEUNIT[\"unity\",1],\n",
+      "            ID[\"EPSG\",8805]],\n",
+      "        PARAMETER[\"False easting\",500000,\n",
+      "            LENGTHUNIT[\"metre\",1],\n",
+      "            ID[\"EPSG\",8806]],\n",
+      "        PARAMETER[\"False northing\",10000000,\n",
+      "            LENGTHUNIT[\"metre\",1],\n",
+      "            ID[\"EPSG\",8807]]],\n",
+      "    CS[Cartesian,2],\n",
+      "        AXIS[\"easting\",east,\n",
+      "            ORDER[1],\n",
+      "            LENGTHUNIT[\"metre\",1]],\n",
+      "        AXIS[\"northing\",north,\n",
+      "            ORDER[2],\n",
+      "            LENGTHUNIT[\"metre\",1]],\n",
+      "    ID[\"EPSG\",32736]]\n",
+      "Data axis to CRS axis mapping: 1,2\n",
+      "Origin = (173723.361721856228542,9789230.701895246282220)\n",
+      "Pixel Size = (0.496305457311709,-0.496305457311709)\n",
+      "Metadata:\n",
+      "  AREA_OR_POINT=Area\n",
+      "Image Structure Metadata:\n",
+      "  COMPRESSION=JPEG\n",
+      "  INTERLEAVE=PIXEL\n",
+      "  SOURCE_COLOR_SPACE=YCbCr\n",
+      "Corner Coordinates:\n",
+      "Upper Left  (  173723.362, 9789230.702) ( 30d 4' 3.04\"E,  1d54'15.76\"S)\n",
+      "Lower Left  (  173723.362, 9785127.745) ( 30d 4' 2.81\"E,  1d56'29.21\"S)\n",
+      "Upper Right (  180255.734, 9789230.702) ( 30d 7'34.22\"E,  1d54'16.11\"S)\n",
+      "Lower Right (  180255.734, 9785127.745) ( 30d 7'34.00\"E,  1d56'29.58\"S)\n",
+      "Center      (  176989.548, 9787179.223) ( 30d 5'48.52\"E,  1d55'22.67\"S)\n",
+      "Band 1 Block=13162x1 Type=Byte, ColorInterp=Red\n",
+      "  Description = Layer_1\n",
+      "  Min=4.000 Max=245.000 \n",
+      "  Minimum=4.000, Maximum=245.000, Mean=28.065, StdDev=11.033\n",
+      "  NoData Value=nan\n",
+      "  Overviews: 6581x4134, 3291x2067, 1646x1034\n",
+      "  Metadata:\n",
+      "    LAYER_TYPE=athematic\n",
+      "    OVERVIEWS_ALGORITHM=ErdasBino3\n",
+      "    STATISTICS_APPROXIMATE=YES\n",
+      "    STATISTICS_MAXIMUM=245\n",
+      "    STATISTICS_MEAN=28.064788091875\n",
+      "    STATISTICS_MINIMUM=4\n",
+      "    STATISTICS_STDDEV=11.032859133288\n",
+      "    STATISTICS_VALID_PERCENT=100\n",
+      "  Image Structure Metadata:\n",
+      "    COMPRESSION=JPEG\n",
+      "Band 2 Block=13162x1 Type=Byte, ColorInterp=Green\n",
+      "  Description = Layer_2\n",
+      "  Min=6.000 Max=254.000 \n",
+      "  Minimum=6.000, Maximum=254.000, Mean=23.019, StdDev=7.271\n",
+      "  NoData Value=nan\n",
+      "  Overviews: 6581x4134, 3291x2067, 1646x1034\n",
+      "  Metadata:\n",
+      "    LAYER_TYPE=athematic\n",
+      "    OVERVIEWS_ALGORITHM=ErdasBino3\n",
+      "    STATISTICS_APPROXIMATE=YES\n",
+      "    STATISTICS_MAXIMUM=254\n",
+      "    STATISTICS_MEAN=23.019072083781\n",
+      "    STATISTICS_MINIMUM=6\n",
+      "    STATISTICS_STDDEV=7.2711055980295\n",
+      "    STATISTICS_VALID_PERCENT=100\n",
+      "  Image Structure Metadata:\n",
+      "    COMPRESSION=JPEG\n",
+      "Band 3 Block=13162x1 Type=Byte, ColorInterp=Blue\n",
+      "  Description = Layer_3\n",
+      "  Min=21.000 Max=253.000 \n",
+      "  Minimum=21.000, Maximum=253.000, Mean=36.518, StdDev=6.378\n",
+      "  NoData Value=nan\n",
+      "  Overviews: 6581x4134, 3291x2067, 1646x1034\n",
+      "  Metadata:\n",
+      "    LAYER_TYPE=athematic\n",
+      "    OVERVIEWS_ALGORITHM=ErdasBino3\n",
+      "    STATISTICS_APPROXIMATE=YES\n",
+      "    STATISTICS_MAXIMUM=253\n",
+      "    STATISTICS_MEAN=36.517727754524\n",
+      "    STATISTICS_MINIMUM=21\n",
+      "    STATISTICS_STDDEV=6.3783566873936\n",
+      "    STATISTICS_VALID_PERCENT=100\n",
+      "  Image Structure Metadata:\n",
+      "    COMPRESSION=JPEG\n"
+     ]
+    }
+   ],
    "source": [
     "dst = gdal.Open(\"E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB.jpg\")\n",
     "dst.GetMetadata()\n",
-    "!gdalinfo E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB_4.jpg"
+    "!gdalinfo E:/W_Katrin/Kigali/Raster/2015_Pleiades_Kigali_subset_RGB.jpg"
    ]
   },
   {
